# Random-3D-engine

./: .gitignore  CMakeLists.txt  Makefile  SConstruct  defines.cpp  defines.h  draw.cpp  draw.h  error.cpp  game.cpp  game_prototype.h  logic.cpp  logic.h  main.cpp  swarmers.py  swarmers.rc  timing.cpp
engine/: SConscript  defines.cpp  defines.h  error.h  game_prototype.h  main.cpp  timing.cpp  timing.h
game/: SConscript  SConstruct  cube.cpp  event_handler.cpp  event_handler.h  events.cpp  events.h  game.cpp  gl_setup.cpp  gl_setup.h  misc.h  projection.cpp  projection.h  star.cpp  star.h  swarmer.cpp  swarmer.h
